OO-3292: manager curriculum permissions in course members management